tests/ui/consts/const_transmute_type_id4.stderr
error[E0080]: type_id_eq: `TypeId` provenance is not a type id
  --> $DIR/const_transmute_type_id4.rs:12:13
   |
LL |     assert!(a == b);
   |             ^^^^^^ evaluation of `_` failed inside this call
   |
note: inside `<TypeId as PartialEq>::eq`
  --> $SRC_DIR/core/src/any.rs:LL:COL
note: inside `<TypeId as PartialEq>::eq::ct`
  --> $SRC_DIR/core/src/any.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
